# webai_opened

./: Cargo.toml  README.md
src/: database_management.rs  main.rs  page_hasher.rs  session_management.rs  webai_management.rs
webai/: sitemap.xml  webai.js
webai/assets/anim_icon/: scene.splinecode
webai/assets/css/: landing.css  questionnaire.css
webai/assets/scripts/: anim_cub1.js  anim_landscape.js  anim_script.js  anim_script2.js
webai/friend/: help.html
webai/pages/: dummy.html  error_page.html  index.html  landing.html  questionnaire.html  webai_project.html  webspace.html
